--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "An application to manage FATE character sheets.",
   "repository": "chrisbouchard/fate-charsheet-2.0",
   "scripts": {
+    "postinstall": "typings install",
     "build-dev": "NODE_ENV=development gulp build",
     "build-prod": "NODE_ENV=production gulp build",
     "build-semantic": "NODE_ENV=production gulp semantic:build",
@@ -58,6 +59,7 @@
     "tslint": "3.6.0",
     "tslint-loader": "2.1.3",
     "typescript": "1.8.9",
+    "typings": "0.7.12",
     "url-loader": "0.5.7",
     "webpack": "1.12.14",
     "webpack-dev-server": "1.14.1",
