--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": "chrisbouchard/fate-charsheet-2.0",
   "scripts": {
     "postinstall": "typings install",
+    "build": "NODE_ENV=production gulp build",
     "build-dev": "NODE_ENV=development gulp build",
     "build-prod": "NODE_ENV=production gulp build",
     "build-semantic": "NODE_ENV=production gulp semantic:build",
@@ -17,53 +18,62 @@
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "angular2": "2.0.0-beta.12",
-    "babel-polyfill": "6.7.4",
-    "core-decorators": "0.12.0",
+    "@angular/common": "2.0.0-rc.1",
+    "@angular/compiler": "2.0.0-rc.1",
+    "@angular/core": "2.0.0-rc.1",
+    "@angular/http": "2.0.0-rc.1",
+    "@angular/platform-browser": "2.0.0-rc.1",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+    "@angular/router": "2.0.0-rc.1",
+    "@angular/router-deprecated": "2.0.0-rc.1",
+    "@angular/upgrade": "2.0.0-rc.1",
+    "babel-polyfill": "6.8.0",
+    "core-decorators": "0.12.2",
     "es6-promise": "3.1.2",
     "es6-shim": "0.35.0",
-    "jquery": "2.2.2",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
+    "jquery": "2.2.3",
+    "reflect-metadata": "0.1.3",
+    "rxjs": "5.0.0-beta.7",
     "semantic-ui": "2.1.8",
     "uri-templates": "0.1.9",
     "wu": "2.1.0",
-    "zone.js": "0.6.6"
+    "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "babel-core": "6.7.4",
+    "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.6.0",
+    "codelyzer": "0.0.19",
     "css-loader": "0.23.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "gulp": "3.9.1",
     "haml-haml-loader": "1.0.1",
     "html-loader": "0.4.3",
-    "html-webpack-plugin": "2.14.0",
+    "html-webpack-plugin": "2.16.1",
     "jasmine-core": "2.4.1",
     "karma": "0.13.22",
-    "karma-chrome-launcher": "0.2.3",
-    "karma-jasmine": "0.3.8",
-    "karma-mocha-reporter": "2.0.0",
+    "karma-chrome-launcher": "1.0.1",
+    "karma-jasmine": "1.0.2",
+    "karma-mocha-reporter": "2.0.3",
     "karma-phantomjs-launcher": "1.0.0",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.7.0",
     "less": "2.6.1",
-    "less-loader": "2.2.2",
+    "less-loader": "2.2.3",
     "phantomjs-prebuilt": "2.1.7",
     "raw-loader": "0.5.1",
     "source-map-loader": "0.1.5",
     "style-loader": "0.13.1",
-    "ts-loader": "0.8.1",
-    "tslint": "3.6.0",
-    "tslint-loader": "2.1.3",
-    "typescript": "1.8.9",
-    "typings": "0.7.12",
+    "ts-loader": "0.8.2",
+    "tslint": "3.9.0",
+    "tslint-loader": "2.1.4",
+    "typescript": "1.8.10",
+    "typings": "0.8.1",
     "url-loader": "0.5.7",
-    "webpack": "1.12.14",
+    "webpack": "1.13.0",
     "webpack-dev-server": "1.14.1",
-    "webpack-merge": "0.8.4",
-    "webpack-sources": "0.1.1"
+    "webpack-merge": "0.12.0",
+    "webpack-sources": "0.1.2"
   }
 }
