--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "@angular/platform-browser-dynamic": "2.0.0-rc.1",
     "@angular/router": "2.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.1",
-    "@ngrx/devtools": "1.4.0",
-    "@ngrx/store": "1.5.0",
+    "@ngrx/core": "1.0.0",
+    "@ngrx/effects": "1.0.1",
+    "@ngrx/store": "2.0.0",
     "babel-polyfill": "6.8.0",
     "core-decorators": "0.12.2",
     "es6-promise": "3.2.1",
     "es6-shim": "0.35.1",
     "immutable": "3.8.1",
     "jquery": "2.2.3",
-    "ngrx-store-router": "0.3.0",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.6",
     "semantic-ui": "2.1.8",
