--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ngrx/core": "1.0.1",
     "@ngrx/effects": "1.0.1",
     "@ngrx/store": "2.0.1",
+    "@ngrx/store-devtools": "2.0.0-beta.1",
+    "@ngrx/store-log-monitor": "2.0.0-beta.1",
     "babel-polyfill": "6.9.1",
     "core-decorators": "0.12.3",
     "es6-promise": "3.2.1",
