--- a/package.json
+++ b/package.json
@@ -76,9 +76,9 @@
     "source-map-loader": "0.1.5",
     "style-loader": "0.13.1",
     "ts-loader": "0.8.2",
-    "tslint": "3.13.0",
+    "tslint": "3.14.0-dev.0",
     "tslint-loader": "2.1.5",
-    "typescript": "1.9.0-dev.20160513",
+    "typescript": "2.1.0-dev.20160718",
     "typings": "1.3.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
