--- a/package.json
+++ b/package.json
@@ -78,7 +78,7 @@
     "ts-loader": "0.8.2",
     "tslint": "3.14.0-dev.0",
     "tslint-loader": "2.1.5",
-    "typescript": "2.1.0-dev.20160718",
+    "typescript": "2.0.0",
     "typings": "1.3.1",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
