--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "server": "cross-env NODE_ENV=development gulp server",
     "start": "cross-env NODE_ENV=development gulp server",
     "test": "cross-env NODE_ENV=test gulp test",
-    "test-ci": "cross-env NODE_ENV=test gulp ci"
+    "test-ci": "cross-env NODE_ENV=test gulp test-ci"
   },
   "keywords": [],
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
