--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rxjs": "5.0.0-beta.6",
     "semantic-ui": "2.2.2",
     "uri-templates": "0.2.0",
+    "web-animations-js": "2.2.2",
     "wu": "2.1.0",
     "zone.js": "0.6.12"
   },
