--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.4",
-    "@angular/compiler": "2.0.0-rc.4",
-    "@angular/core": "2.0.0-rc.4",
-    "@angular/http": "2.0.0-rc.4",
-    "@angular/platform-browser": "2.0.0-rc.4",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-    "@angular/router": "3.0.0-beta.2",
+    "@angular/common": "2.0.0-rc.5",
+    "@angular/compiler": "2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
+    "@angular/http": "2.0.0-rc.5",
+    "@angular/platform-browser": "2.0.0-rc.5",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
+    "@angular/router": "3.0.0-rc.1",
     "@angular/router-deprecated": "2.0.0-rc.2",
     "@ngrx/core": "1.0.1",
-    "@ngrx/effects": "1.0.1",
+    "@ngrx/effects": "1.1.1",
     "@ngrx/store": "2.0.1",
     "@ngrx/store-devtools": "2.0.0-beta.1",
     "@ngrx/store-log-monitor": "2.0.0-beta.1",
-    "babel-polyfill": "6.9.1",
+    "babel-polyfill": "6.13.0",
     "core-decorators": "0.12.3",
     "es6-promise": "3.2.1",
     "es6-shim": "0.35.1",
     "immutable": "3.8.1",
     "jquery": "3.1.0",
     "ngrx-store-router": "0.4.0",
-    "reflect-metadata": "0.1.3",
+    "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.6",
     "semantic-ui": "2.2.2",
     "uri-templates": "0.2.0",
@@ -48,11 +48,11 @@
     "zone.js": "0.6.12"
   },
   "devDependencies": {
-    "babel-core": "6.10.4",
+    "babel-core": "6.13.2",
     "babel-loader": "6.2.4",
-    "babel-preset-es2015": "6.9.0",
-    "codelyzer": "0.0.25",
-    "cross-env": "1.0.8",
+    "babel-preset-es2015": "6.13.2",
+    "codelyzer": "0.0.27",
+    "cross-env": "2.0.0",
     "css-loader": "0.23.1",
     "extract-loader": "0.0.2",
     "extract-text-webpack-plugin": "1.0.1",
@@ -63,29 +63,29 @@
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
     "jasmine-core": "2.4.1",
-    "karma": "1.1.1",
+    "karma": "1.1.2",
     "karma-chrome-launcher": "1.0.1",
     "karma-jasmine": "1.0.2",
-    "karma-mocha-reporter": "2.0.4",
+    "karma-mocha-reporter": "2.1.0",
     "karma-phantomjs-launcher": "1.0.1",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "1.7.0",
+    "karma-webpack": "1.8.0",
     "less": "2.7.1",
     "less-loader": "2.2.3",
-    "phantomjs-prebuilt": "2.1.7",
+    "phantomjs-prebuilt": "2.1.11",
     "raw-loader": "0.5.1",
     "run-sequence": "1.2.2",
     "source-map-loader": "0.1.5",
     "style-loader": "0.13.1",
     "ts-loader": "0.8.2",
-    "tslint": "3.14.0-dev.0",
+    "tslint": "3.14.0",
     "tslint-loader": "2.1.5",
     "typescript": "2.0.0",
-    "typings": "1.3.1",
+    "typings": "1.3.2",
     "url-loader": "0.5.7",
     "webpack": "1.13.1",
     "webpack-dev-server": "1.14.1",
-    "webpack-merge": "0.14.0",
+    "webpack-merge": "0.14.1",
     "webpack-sources": "0.1.2"
   }
 }
