--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "es6-shim": "0.35.1",
     "immutable": "3.8.1",
     "jquery": "3.1.0",
+    "ng2-hal": "github:chrisbouchard/ng2-hal",
     "ngrx-store-router": "0.4.0",
     "reflect-metadata": "0.1.8",
     "rxjs": "5.0.0-beta.6",
