--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "zone.js": "0.6.12"
   },
   "devDependencies": {
+    "awesome-typescript-loader": "2.2.1",
     "babel-core": "6.13.2",
     "babel-loader": "6.2.4",
     "babel-preset-es2015": "6.13.2",
