--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
   "files": [
     "custom_typings/custom.d.ts",
     "typings/index.d.ts"
-  ]
+  ],
+  "awesomeTypescriptLoaderOptions": {
+    "useBabel": true,
+    "useCache": true
+  }
 }
 
