--- a/package.json
+++ b/package.json
@@ -19,19 +19,18 @@
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "@angular/common": "2.0.0-rc.5",
-    "@angular/compiler": "2.0.0-rc.5",
-    "@angular/core": "2.0.0-rc.5",
-    "@angular/http": "2.0.0-rc.5",
-    "@angular/platform-browser": "2.0.0-rc.5",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.5",
-    "@angular/router": "3.0.0-rc.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
-    "@ngrx/core": "1.0.1",
-    "@ngrx/effects": "1.1.1",
-    "@ngrx/store": "2.0.1",
-    "@ngrx/store-devtools": "2.0.0-beta.1",
-    "@ngrx/store-log-monitor": "2.0.0-beta.1",
+    "@angular/common": "2.0.0-rc.6",
+    "@angular/compiler": "2.0.0-rc.6",
+    "@angular/core": "2.0.0-rc.6",
+    "@angular/http": "2.0.0-rc.6",
+    "@angular/platform-browser": "2.0.0-rc.6",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
+    "@angular/router": "3.0.0-rc.2",
+    "@ngrx/core": "1.1.0",
+    "@ngrx/effects": "2.0.0-beta.3",
+    "@ngrx/store": "2.1.2",
+    "@ngrx/store-devtools": "3.0.1",
+    "@ngrx/store-log-monitor": "3.0.1",
     "babel-polyfill": "6.13.0",
     "core-decorators": "0.12.3",
     "es6-promise": "3.2.1",
@@ -41,12 +40,12 @@
     "ng2-hal": "github:chrisbouchard/ng2-hal",
     "ngrx-store-router": "0.4.0",
     "reflect-metadata": "0.1.8",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.11",
     "semantic-ui": "2.2.2",
     "uri-templates": "0.2.0",
     "web-animations-js": "2.2.2",
     "wu": "2.1.0",
-    "zone.js": "0.6.12"
+    "zone.js": "0.6.17"
   },
   "devDependencies": {
     "awesome-typescript-loader": "2.2.1",
