Update TypeScript dependency.

--- a/package.json
+++ b/package.json
@@ -78,8 +78,7 @@
     "style-loader": "0.13.1",
     "tslint": "4.4.2",
     "tslint-loader": "3.3.0",
-    "typescript": "2.1.5",
-    "typings": "2.1.0",
+    "typescript": "2.2.0-dev.20170205",
     "url-loader": "0.5.7",
     "webpack": "2.2.1",
     "webpack-dev-server": "2.3.0",
