--- a/package.json
+++ b/package.json
@@ -4,15 +4,13 @@
   "description": "An application to manage FATE character sheets.",
   "repository": "chrisbouchard/fate-charsheet-2.0",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack",
-    "build-dev": "cross-env NODE_ENV=development webpack --env.profile=development",
-    "build-prod": "cross-env NODE_ENV=production webpack --env.profile=production",
-    "build-semantic": "cross-env NODE_ENV=production gulp semantic:build",
-    "clean": "gulp clean",
-    "server": "cross-env NODE_ENV=development webpack-dev-server --env.profile=development",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --env.profile=development",
-    "test": "cross-env NODE_ENV=test gulp test",
-    "test-ci": "cross-env NODE_ENV=test gulp test-ci"
+    "build": "webpack --env.profile=production",
+    "build-dev": "webpack --env.profile=development",
+    "clean": "rimraf dist",
+    "server": "webpack-dev-server --env.profile=development",
+    "start": "npm run server",
+    "test": "karma start karma.conf.js --single-run",
+    "test-ci": "karma start karma.conf.js"
   },
   "keywords": [],
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
@@ -55,13 +53,10 @@
     "babel-preset-es2016": "6.22.0",
     "babel-preset-es2017": "6.22.0",
     "codelyzer": "2.0.0-beta.4",
-    "cross-env": "3.1.4",
     "css-loader": "0.26.1",
     "extract-loader": "0.1.0",
     "extract-text-webpack-plugin": "2.0.0-rc.3",
     "file-loader": "0.10.0",
-    "gulp": "3.9.1",
-    "gulp-clean": "0.3.2",
     "haml-haml-loader": "1.0.1",
     "html-loader": "0.4.4",
     "html-webpack-plugin": "2.28.0",
@@ -78,7 +73,7 @@
     "ng-router-loader": "2.1.0",
     "phantomjs-prebuilt": "2.1.14",
     "raw-loader": "0.5.1",
-    "run-sequence": "1.2.2",
+    "rimraf": "2.5.4",
     "source-map-loader": "0.1.6",
     "style-loader": "0.13.1",
     "tslint": "4.4.2",
