Update how we handle types.
Use tsconfig.json's typeRoots property to specify our custom types.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,9 @@
     "sourceMap": true,
     "target": "es6"
   },
-  "files": [
-    "custom_typings/custom.d.ts"
+  "typeRoots": [
+    "./node_modules/@types",
+    "./custom_typings"
   ]
 }
 
