--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "zone.js": "0.7.6"
   },
   "devDependencies": {
+    "@angular/language-service": "2.4.8",
     "@types/core-decorators": "0.10.30",
     "@types/jasmine": "2.5.41",
     "@types/jquery": "2.0.40",
