--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/core-decorators": "0.10.30",
     "@types/jasmine": "2.5.41",
     "@types/jquery": "2.0.40",
+    "@types/node": "7.0.12",
     "angular2-template-loader": "0.6.0",
     "awesome-typescript-loader": "3.0.0-beta.19",
     "babel-core": "6.22.1",
