--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,8 @@
     ],
     "moduleResolution": "node",
     "noImplicitAny": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "sourceMap": true,
     "target": "es6"
   },
