--- a/package.json
+++ b/package.json
@@ -16,75 +16,75 @@
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "@angular/common": "2.4.6",
-    "@angular/compiler": "2.4.6",
-    "@angular/core": "2.4.6",
-    "@angular/http": "2.4.6",
-    "@angular/platform-browser": "2.4.6",
-    "@angular/platform-browser-dynamic": "2.4.6",
-    "@angular/router": "3.4.6",
+    "@angular/common": "4.1.3",
+    "@angular/compiler": "4.1.3",
+    "@angular/core": "4.1.3",
+    "@angular/http": "4.1.3",
+    "@angular/platform-browser": "4.1.3",
+    "@angular/platform-browser-dynamic": "4.1.3",
+    "@angular/router": "4.1.3",
     "@ngrx/core": "1.2.0",
-    "@ngrx/effects": "2.0.0",
-    "@ngrx/store": "2.2.1",
-    "@ngrx/store-devtools": "3.2.3",
+    "@ngrx/effects": "2.0.3",
+    "@ngrx/store": "2.2.2",
+    "@ngrx/store-devtools": "3.2.4",
     "@ngrx/store-log-monitor": "3.0.2",
-    "babel-polyfill": "6.22.0",
-    "core-decorators": "0.15.0",
-    "es6-promise": "4.0.5",
+    "babel-polyfill": "6.23.0",
+    "core-decorators": "0.19.0",
+    "es6-promise": "4.1.0",
     "es6-shim": "0.35.3",
     "immutable": "3.8.1",
-    "jquery": "3.1.1",
+    "jquery": "3.2.1",
     "ng2-hal": "github:chrisbouchard/ng2-hal",
-    "reflect-metadata": "0.1.9",
-    "rxjs": "5.1.0",
+    "reflect-metadata": "0.1.10",
+    "rxjs": "5.4.0",
     "semantic-ui": "2.2.10",
-    "web-animations-js": "2.2.2",
-    "zone.js": "0.7.6"
+    "web-animations-js": "2.2.5",
+    "zone.js": "0.8.11"
   },
   "devDependencies": {
-    "@angular/language-service": "2.4.8",
-    "@types/core-decorators": "0.10.30",
-    "@types/jasmine": "2.5.41",
-    "@types/jquery": "2.0.40",
-    "@types/node": "7.0.12",
-    "angular2-template-loader": "0.6.0",
-    "awesome-typescript-loader": "3.0.0-beta.19",
-    "babel-core": "6.22.1",
-    "babel-loader": "6.2.10",
-    "babel-preset-es2015": "6.22.0",
-    "babel-preset-es2016": "6.22.0",
-    "babel-preset-es2017": "6.22.0",
-    "codelyzer": "2.0.0-beta.4",
-    "css-loader": "0.26.1",
+    "@angular/language-service": "4.1.3",
+    "@types/core-decorators": "0.10.32",
+    "@types/jasmine": "2.5.47",
+    "@types/jquery": "2.0.45",
+    "@types/node": "7.0.22",
+    "angular2-template-loader": "0.6.2",
+    "awesome-typescript-loader": "3.1.3",
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-es2016": "6.24.1",
+    "babel-preset-es2017": "6.24.1",
+    "codelyzer": "3.0.1",
+    "css-loader": "0.28.3",
     "extract-loader": "0.1.0",
-    "extract-text-webpack-plugin": "2.0.0-rc.3",
-    "file-loader": "0.10.0",
+    "extract-text-webpack-plugin": "2.1.0",
+    "file-loader": "0.11.1",
     "haml-haml-loader": "1.0.1",
-    "html-loader": "0.4.4",
+    "html-loader": "0.4.5",
     "html-webpack-plugin": "2.28.0",
-    "jasmine-core": "2.5.2",
-    "karma": "1.4.1",
-    "karma-chrome-launcher": "2.0.0",
+    "jasmine-core": "2.6.2",
+    "karma": "1.7.0",
+    "karma-chrome-launcher": "2.1.1",
     "karma-jasmine": "1.1.0",
-    "karma-mocha-reporter": "2.2.2",
-    "karma-phantomjs-launcher": "1.0.2",
+    "karma-mocha-reporter": "2.2.3",
+    "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.2",
+    "karma-webpack": "2.0.3",
     "less": "2.7.2",
-    "less-loader": "2.2.3",
+    "less-loader": "4.0.3",
     "ng-router-loader": "2.1.0",
     "phantomjs-prebuilt": "2.1.14",
     "raw-loader": "0.5.1",
-    "rimraf": "2.5.4",
-    "source-map-loader": "0.1.6",
-    "style-loader": "0.13.1",
-    "tslint": "4.4.2",
-    "tslint-loader": "3.3.0",
-    "typescript": "2.2.0-dev.20170207",
-    "url-loader": "0.5.7",
-    "webpack": "2.2.1",
-    "webpack-dev-server": "2.3.0",
-    "webpack-merge": "2.6.1",
-    "webpack-sources": "0.1.4"
+    "rimraf": "2.6.1",
+    "source-map-loader": "0.2.1",
+    "style-loader": "0.18.1",
+    "tslint": "5.3.2",
+    "tslint-loader": "3.5.3",
+    "typescript": "2.3.3",
+    "url-loader": "0.5.8",
+    "webpack": "2.6.1",
+    "webpack-dev-server": "2.4.5",
+    "webpack-merge": "4.1.0",
+    "webpack-sources": "0.2.3"
   }
 }
