--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,8 +10,10 @@
     ],
     "moduleResolution": "node",
     "noImplicitAny": true,
+    "noImplicitReturns": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
+    "pretty": true,
     "sourceMap": true,
     "target": "es6"
   },
