Fix animation for Angular 4.2

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
+    "@angular/animations": "4.2.2",
     "@angular/common": "4.2.2",
     "@angular/compiler": "4.2.2",
     "@angular/core": "4.2.2",
