--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "baseUrl": "",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "lib": [
@@ -12,14 +13,28 @@
         "noImplicitAny": true,
         "noImplicitReturns": true,
         "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        "noUnusedParameters": false,
         "pretty": true,
         "sourceMap": true,
         "target": "es6"
     },
+    "include": [
+        "src/**/*.ts"
+    ],
+    "exclude": [
+        "node_modules/",
+        "ngfactory/",
+        "src/index.ts"
+    ],
     "typeRoots": [
         "./node_modules/@types",
         "./custom_typings"
-    ]
+    ],
+    "angularCompilerOptions": {
+        "alwaysCompileGeneratedCode": true,
+        "entryModule": "src/app/app.module#AppModule",
+        "genDir": "src",
+        "skipMetadataEmit": true
+    }
 }
 
