Update to ngrx 4 nightly.
This correctly compiles with AOT.

--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "@angular/http": "4.2.2",
     "@angular/platform-browser": "4.2.2",
     "@angular/router": "4.2.2",
-    "@ngrx/core": "1.2.0",
-    "@ngrx/effects": "2.0.3",
-    "@ngrx/store": "2.2.2",
-    "@ngrx/store-devtools": "3.2.4",
-    "@ngrx/store-log-monitor": "3.0.2",
+    "@ngrx/effects": "github:ngrx/effects-builds",
+    "@ngrx/store": "github:ngrx/store-builds",
+    "@ngrx/store-devtools": "github:ngrx/store-devtools-builds",
     "babel-polyfill": "6.23.0",
     "core-decorators": "0.19.0",
     "es6-promise": "4.1.0",
