Compile using ngc-webpack and awesome-typescript-loader

--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "@angular/animations": "4.2.2",
-    "@angular/common": "4.2.2",
-    "@angular/compiler": "4.2.2",
-    "@angular/core": "4.2.2",
-    "@angular/http": "4.2.2",
-    "@angular/platform-browser": "4.2.2",
-    "@angular/router": "4.2.2",
+    "@angular/animations": "4.2.3",
+    "@angular/common": "4.2.3",
+    "@angular/compiler": "4.2.3",
+    "@angular/core": "4.2.3",
+    "@angular/http": "4.2.3",
+    "@angular/platform-browser": "4.2.3",
+    "@angular/router": "4.2.3",
     "@ngrx/effects": "github:ngrx/effects-builds",
     "@ngrx/store": "github:ngrx/store-builds",
     "@ngrx/store-devtools": "github:ngrx/store-devtools-builds",
@@ -40,8 +40,8 @@
     "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "4.2.2",
-    "@angular/language-service": "4.2.2",
+    "@angular/compiler-cli": "4.2.3",
+    "@angular/language-service": "4.2.3",
     "@ngtools/webpack": "1.5.0-rc.0",
     "@types/core-decorators": "0.10.32",
     "@types/jasmine": "2.5.52",
@@ -73,6 +73,7 @@
     "less": "2.7.2",
     "less-loader": "4.0.4",
     "ng-router-loader": "2.1.0",
+    "ngc-webpack": "2.0.0",
     "phantomjs-prebuilt": "2.1.14",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
