--- a/package.json
+++ b/package.json
@@ -16,45 +16,45 @@
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
   "license": "BSD-2-Clause",
   "dependencies": {
-    "@angular/animations": "4.2.3",
-    "@angular/common": "4.2.3",
-    "@angular/compiler": "4.2.3",
-    "@angular/core": "4.2.3",
-    "@angular/http": "4.2.3",
-    "@angular/platform-browser": "4.2.3",
-    "@angular/router": "4.2.3",
+    "@angular/animations": "4.2.4",
+    "@angular/common": "4.2.4",
+    "@angular/compiler": "4.2.4",
+    "@angular/core": "4.2.4",
+    "@angular/http": "4.2.4",
+    "@angular/platform-browser": "4.2.4",
+    "@angular/router": "4.2.4",
     "@ngrx/effects": "github:ngrx/effects-builds",
     "@ngrx/store": "github:ngrx/store-builds",
     "@ngrx/store-devtools": "github:ngrx/store-devtools-builds",
     "babel-polyfill": "6.23.0",
     "core-decorators": "0.19.0",
+    "core-js": "2.4.1",
     "es6-promise": "4.1.0",
     "es6-shim": "0.35.3",
     "immutable": "3.8.1",
     "jquery": "3.2.1",
     "ng2-hal": "github:chrisbouchard/ng2-hal",
-    "reflect-metadata": "0.1.10",
-    "rxjs": "5.4.0",
+    "rxjs": "5.4.1",
     "semantic-ui": "2.2.10",
     "web-animations-js": "2.2.5",
     "zone.js": "0.8.12"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "4.2.3",
-    "@angular/language-service": "4.2.3",
-    "@ngtools/webpack": "1.5.0-rc.0",
+    "@angular/compiler-cli": "4.2.4",
+    "@angular/language-service": "4.2.4",
     "@types/core-decorators": "0.10.32",
+    "@types/core-js": "0.9.41",
     "@types/jasmine": "2.5.52",
-    "@types/jquery": "2.0.46",
-    "@types/node": "7.0.31",
+    "@types/jquery": "3.2.3",
+    "@types/node": "8.0.1",
     "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.1.3",
     "babel-core": "6.25.0",
-    "babel-loader": "7.0.0",
+    "babel-loader": "7.1.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-es2016": "6.24.1",
     "babel-preset-es2017": "6.24.1",
-    "codelyzer": "3.0.1",
+    "codelyzer": "3.1.1",
     "css-loader": "0.28.4",
     "extract-loader": "0.1.0",
     "extract-text-webpack-plugin": "2.1.2",
@@ -62,7 +62,7 @@
     "haml-haml-loader": "1.0.1",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.28.0",
-    "jasmine-core": "2.6.3",
+    "jasmine-core": "2.6.4",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.1.1",
     "karma-jasmine": "1.1.0",
@@ -73,19 +73,19 @@
     "less": "2.7.2",
     "less-loader": "4.0.4",
     "ng-router-loader": "2.1.0",
-    "ngc-webpack": "2.0.0",
+    "ngc-webpack": "3.0.0",
     "phantomjs-prebuilt": "2.1.14",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
-    "tslint": "4.5.1",
+    "tslint": "5.4.3",
     "tslint-loader": "3.5.3",
     "typescript": "2.4.0",
     "url-loader": "0.5.9",
     "watch-ignore-webpack-plugin": "1.0.0",
-    "webpack": "2.6.1",
-    "webpack-dev-server": "2.4.5",
+    "webpack": "3.0.0",
+    "webpack-dev-server": "2.5.0",
     "webpack-merge": "4.1.0",
     "webpack-sources": "1.0.1"
   }
