--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
         "noUnusedParameters": false,
         "pretty": true,
         "sourceMap": true,
+        "skipLibCheck": true,
         "target": "es6"
     },
     "include": [
