--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "server": "webpack-dev-server --env.profile=development",
     "start": "npm run server",
     "test": "karma start karma.conf.js --single-run",
+    "test-circleci": "karma start karma.conf.js --single-run --reporters junit",
     "test-ci": "karma start karma.conf.js"
   },
   "keywords": [],
@@ -66,6 +67,7 @@
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-jasmine": "1.1.0",
+    "karma-junit-reporter": "1.2.0",
     "karma-mocha-reporter": "2.2.3",
     "karma-phantomjs-launcher": "1.0.4",
     "karma-sourcemap-loader": "0.3.7",
