--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server": "webpack-dev-server --env.profile=development",
     "start": "npm run server",
     "test": "karma start karma.conf.js --single-run",
-    "test-circleci": "karma start karma.conf.js --single-run --reporters junit",
+    "test-circleci": "karma start karma.conf.js --single-run --reporters junit,mocha",
     "test-ci": "karma start karma.conf.js"
   },
   "keywords": [],
