--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "phantomjs-prebuilt": "2.1.14",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
+    "semantic-ui-less-module-loader": "1.0.0",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
     "tslint": "5.5.0",
