--- a/circle.yml
+++ b/circle.yml
@@ -1,6 +1,9 @@
 machine:
+  timezone: America/New_York
   node:
-    version: 8.1.3
+    version: 8.1.4
+  post:
+    - npm install --global npm@5.3.0
 
 test:
   override:
