--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/platform-browser-dynamic": "4.3.0",
     "@angular/router": "4.3.0",
     "@ngrx/effects": "github:ngrx/effects-builds",
+    "@ngrx/router-store": "github:ngrx/router-store-builds",
     "@ngrx/store": "github:ngrx/store-builds",
     "@ngrx/store-devtools": "github:ngrx/store-devtools-builds",
     "babel-polyfill": "6.23.0",
