--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/core": "4.3.0",
     "@angular/http": "4.3.0",
     "@angular/platform-browser": "4.3.0",
+    "@angular/platform-browser-dynamic": "4.3.0",
     "@angular/router": "4.3.0",
     "@ngrx/effects": "github:ngrx/effects-builds",
     "@ngrx/store": "github:ngrx/store-builds",
