--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,7 @@ machine:
 
 test:
   override:
+    - npm run build
     - npm run test-circleci:
         environment:
           JUNIT_REPORT_PATH: $CIRCLE_TEST_REPORTS/junit/
