Switch to mocha-webpack for testing

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "clean": "npm run clean-aot && npm run clean-dist",
     "server": "webpack-dev-server --env.profile=development",
     "start": "npm run server",
-    "test": "karma start karma.conf.js --single-run",
-    "test-circleci": "karma start karma.conf.js --single-run --reporters junit,mocha",
-    "test-ci": "karma start karma.conf.js"
+    "test-dev": "mocha-webpack --webpack-config webpack.test-dev.config.js",
+    "test-prod": "mocha-webpack --webpack-config webpack.test-prod.config.js",
+    "test-ci": "mocha-webpack --watch  --webpack-config webpack.test-dev.config.js"
   },
   "keywords": [],
   "author": "Chris Bouchard <chris@upliftinglemma.net>",
@@ -78,6 +78,8 @@
     "karma-webpack": "2.0.4",
     "less": "2.7.2",
     "less-loader": "4.0.5",
+    "mocha": "3.4.2",
+    "mocha-webpack": "0.7.0",
     "ng-router-loader": "2.1.0",
     "ngc-webpack": "3.0.0",
     "phantomjs-prebuilt": "2.1.14",
