--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,10 @@
 {
-    compact: false,
-    presets: [
-        ['es2015', { modules: false }],
-        ['es2016'],
-        ['es2017']
+    "compact": false,
+    "plugins": ["transform-object-rest-spread"],
+    "presets": [
+        ["es2015", { "modules": false }],
+        ["es2016"],
+        ["es2017"]
     ]
 }
 
