--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "awesome-typescript-loader": "3.2.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-es2016": "6.24.1",
     "babel-preset-es2017": "6.24.1",
@@ -96,6 +97,7 @@
     "webpack": "3.3.0",
     "webpack-dev-server": "2.5.1",
     "webpack-merge": "4.1.0",
+    "webpack-node-externals": "1.6.0",
     "webpack-sources": "1.0.1"
   }
 }
