--- a/package.json
+++ b/package.json
@@ -47,11 +47,14 @@
   "devDependencies": {
     "@angular/compiler-cli": "4.3.0",
     "@angular/language-service": "4.3.0",
+    "@types/chai": "4.0.1",
     "@types/core-decorators": "0.10.32",
     "@types/core-js": "0.9.42",
     "@types/jasmine": "2.5.53",
     "@types/jquery": "3.2.8",
+    "@types/jsdom": "11.0.1",
     "@types/node": "8.0.13",
+    "@types/sinon": "2.3.3",
     "angular2-template-loader": "0.6.2",
     "awesome-typescript-loader": "3.2.1",
     "babel-core": "6.25.0",
@@ -60,6 +63,7 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-es2016": "6.24.1",
     "babel-preset-es2017": "6.24.1",
+    "chai": "4.1.0",
     "codelyzer": "3.1.2",
     "css-loader": "0.28.4",
     "extract-loader": "0.1.0",
@@ -69,6 +73,7 @@
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.29.0",
     "jasmine-core": "2.6.4",
+    "jsdom": "11.1.0",
     "karma": "1.7.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-jasmine": "1.1.0",
@@ -88,6 +93,7 @@
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
     "semantic-ui-less-loader": "0.2.0",
+    "sinon": "2.3.8",
     "source-map-loader": "0.2.1",
     "style-loader": "0.18.2",
     "tslint": "5.5.0",
