--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "@types/chai": "4.0.1",
     "@types/core-decorators": "0.10.32",
     "@types/core-js": "0.9.42",
-    "@types/jasmine": "2.5.53",
     "@types/jquery": "3.2.8",
     "@types/jsdom": "11.0.1",
+    "@types/mocha": "2.2.41",
     "@types/node": "8.0.13",
     "@types/sinon": "2.3.3",
     "angular2-template-loader": "0.6.2",
@@ -72,16 +72,7 @@
     "haml-haml-loader": "1.0.1",
     "html-loader": "0.4.5",
     "html-webpack-plugin": "2.29.0",
-    "jasmine-core": "2.6.4",
     "jsdom": "11.1.0",
-    "karma": "1.7.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-jasmine": "1.1.0",
-    "karma-junit-reporter": "1.2.0",
-    "karma-mocha-reporter": "2.2.3",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-sourcemap-loader": "0.3.7",
-    "karma-webpack": "2.0.4",
     "less": "2.7.2",
     "less-loader": "4.0.5",
     "mocha": "3.4.2",
@@ -89,7 +80,6 @@
     "mocha-webpack": "0.7.0",
     "ng-router-loader": "2.1.0",
     "ngc-webpack": "3.0.0",
-    "phantomjs-prebuilt": "2.1.14",
     "raw-loader": "0.5.1",
     "rimraf": "2.6.1",
     "semantic-ui-less-loader": "0.2.0",
